--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "recoil": "^0.5.2"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
