--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.6.0",
     "framer-motion": "^5.4.3",
     "next": "latest",
+    "next-pwa": "^5.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
