--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-pwa": "^5.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
     "recoil": "^0.5.2"
