--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-firebase-hooks": "^4.0.1",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
-    "recoil": "^0.5.2"
+    "recoil": "^0.5.2",
+    "recoil-persist": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
